--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.4.1
 boto3==1.18.39
 botocore==1.21.39
+certifi==2021.5.30
+charset-normalizer==2.0.4
+coreapi==2.3.3
+coreschema==0.0.4
 Django==3.2.7
 django-cors-headers==3.8.0
 django-extensions==3.1.3
@@ -10,15 +14,21 @@ django-s3-storage==0.13.4
 django-storages==1.11.1
 djangorestframework==3.12.4
 gunicorn==20.1.0
+idna==3.2
 inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.0.1
 jmespath==0.10.0
 Markdown==3.3.4
+MarkupSafe==2.0.1
 Pillow==8.3.2
 psycopg2==2.9.1
 python-dateutil==2.8.2
 python-dotenv==0.19.0
 pytz==2021.1
+requests==2.26.0
 s3transfer==0.5.0
 six==1.16.0
 sqlparse==0.4.1
+uritemplate==3.0.1
 urllib3==1.26.6
