--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 asgiref==3.4.1
+attrs==21.2.0
 boto3==1.18.39
 botocore==1.21.39
 certifi==2021.5.30
 charset-normalizer==2.0.4
-coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.7
 django-cors-headers==3.8.0
@@ -19,13 +19,17 @@ inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.0.1
 jmespath==0.10.0
+jsonschema==3.2.0
 Markdown==3.3.4
 MarkupSafe==2.0.1
+openapi==1.1.0
 Pillow==8.3.2
 psycopg2==2.9.1
+pyrsistent==0.18.0
 python-dateutil==2.8.2
 python-dotenv==0.19.0
 pytz==2021.1
+PyYAML==5.4.1
 requests==2.26.0
 s3transfer==0.5.0
 six==1.16.0
