--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,12 @@ attrs==21.2.0
 boto3==1.18.39
 botocore==1.21.39
 certifi==2021.5.30
+cffi==1.14.6
 charset-normalizer==2.0.4
+coreapi==2.3.3
 coreschema==0.0.4
+cryptography==3.4.8
+defusedxml==0.7.1
 Django==3.2.7
 django-cors-headers==3.8.0
 django-extensions==3.1.3
@@ -12,7 +16,9 @@ django-filter==2.4.0
 django-profanity-filter==0.2.1
 django-s3-storage==0.13.4
 django-storages==1.11.1
+django-templated-mail==1.1.1
 djangorestframework==3.12.4
+djangorestframework-simplejwt==4.8.0
 gunicorn==20.1.0
 idna==3.2
 inflection==0.5.1
@@ -22,17 +28,24 @@ jmespath==0.10.0
 jsonschema==3.2.0
 Markdown==3.3.4
 MarkupSafe==2.0.1
+oauthlib==3.1.1
 openapi==1.1.0
 Pillow==8.3.2
 psycopg2==2.9.1
+pycparser==2.20
+PyJWT==2.1.0
 pyrsistent==0.18.0
 python-dateutil==2.8.2
 python-dotenv==0.19.0
+python3-openid==3.2.0
 pytz==2021.1
 PyYAML==5.4.1
 requests==2.26.0
+requests-oauthlib==1.3.0
 s3transfer==0.5.0
 six==1.16.0
+social-auth-app-django==4.0.0
+social-auth-core==4.1.0
 sqlparse==0.4.1
 uritemplate==3.0.1
 urllib3==1.26.6
