--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^1.1.5",
     "react-sizeme": "^3.0.2",
+    "react-stack-grid": "^0.7.1",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2"
