--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.4.1
 attrs==21.2.0
+bleach==4.1.0
 boto3==1.18.39
 botocore==1.21.39
 certifi==2021.5.30
@@ -19,6 +20,7 @@ django-storages==1.11.1
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
+drf-api-logger==1.0.8
 gunicorn==20.1.0
 idna==3.2
 inflection==0.5.1
@@ -30,10 +32,13 @@ Markdown==3.3.4
 MarkupSafe==2.0.1
 oauthlib==3.1.1
 openapi==1.1.0
+openapi-codec==1.3.2
+packaging==21.0
 Pillow==8.3.2
 psycopg2==2.9.1
 pycparser==2.20
 PyJWT==2.1.0
+pyparsing==2.4.7
 pyrsistent==0.18.0
 python-dateutil==2.8.2
 python-dotenv==0.19.0
@@ -42,10 +47,12 @@ pytz==2021.1
 PyYAML==5.4.1
 requests==2.26.0
 requests-oauthlib==1.3.0
+ruamel.yaml==0.17.16
+ruamel.yaml.clib==0.2.6
 s3transfer==0.5.0
+simplejson==3.17.5
 six==1.16.0
-social-auth-app-django==4.0.0
-social-auth-core==4.1.0
 sqlparse==0.4.1
 uritemplate==3.0.1
 urllib3==1.26.6
+webencodings==0.5.1
